fix page error bug

--- a/intro/culture.html
+++ b/intro/culture.html
@@ -45,7 +45,7 @@
 		  <div id="intro_menu">
 		    <ul>
 			  <li>
-			    <a href="introdcution.html" title="学校简介">学校简介</a>
+			    <a href="introduction.html" title="学校简介">学校简介</a>
 			  </li>
 			  <li>
 			    <a href="jiyu.html" title="校长寄语">校长寄语</a>
